Added Day Fourty Nine

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                             <a href="http://bit.do/dayfourtysix" target="_blank">Day Fourty Six - Shooting Range<br></a>
                             <a href="http://bit.do/dayfourtyseven" target="_blank">Day Fourty Seven - Map<br></a>
                                <a href="http://bit.do/dayfourtyeight" target="_blank">Day Fourty Eight - Detour<br></a>
+                                <a href="http://bit.do/dayfourtynine" target="_blank">Day Fourty Nine - Penrose Triangle<br></a>
            
                         </p>
 					</div>
