--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 						<h2>All Sites</h2>
 						<p>
                             <a  href="http://bit.do/dayone" target="_blank">Day One - About<br></a>
-                           <a href="http://bit.do/daytoo" target="_blank">Day Two - Random Color<br></a>
-                            <a href="http://bit.do/daythree" target="_blank">Day Three - What's The Day?<br></a>
-                            <a href="http://bit.do/dayfour" target="_blank">Day Four - Dice<br></a>
-                            <a href="http://bit.do/dayfiveproject" target="_blank">Day Five - Lorem Ipsum<br></a>
+                           <a href="http://bit.do/daytwoproject" target="_blank">Day Two - Random Color<br></a>
+                            <a href="http://bit.do/daythreeproject" target="_blank">Day Three - What's The Day?<br></a>
+                            <a href="http://bit.do/dayfourproject" target="_blank">Day Four - Dice<br></a>
+                            <a href="http://bit.do/dayfiveproject180" target="_blank">Day Five - Lorem Ipsum<br></a>
                         <a href="http://bit.do/daysixproject" target="_blank">Day Six - New Year Countdown<br></a>
                             <a href="http://bit.do/dayseven" target="_blank">Day Seven - Click Counter<br></a>
                             <a href="http://bit.do/dayeight" target="_blank">Day Eight - MessengerApp<br></a>
