--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <a href="http://bit.do/dayfourtyseven" target="_blank">Day Fourty Seven - Map<br></a>
                                <a href="http://bit.do/dayfourtyeight" target="_blank">Day Fourty Eight - Detour<br></a>
                                 <a href="http://bit.do/dayfourtynine" target="_blank">Day Fourty Nine - Penrose Triangle<br></a>
-                                 <a href="http://bit.do/dayfifty" target="_blank">Day Fifty - Reflex Test<br></a>
+                                 <a href="http://bit.do/dayfiftyproject" target="_blank">Day Fifty - Reflex Test<br></a>
            
                         </p>
 					</div>
