--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                             <a href="http://bit.do/daythreeproject" target="_blank">Day Three - What's The Day?<br></a>
                             <a href="http://bit.do/dayfourproject" target="_blank">Day Four - Dice<br></a>
                             <a href="http://bit.do/dayfiveproject180" target="_blank">Day Five - Lorem Ipsum<br></a>
-                        <a href="http://bit.do/daysixproject" target="_blank">Day Six - New Year Countdown<br></a>
-                            <a href="http://bit.do/dayseven" target="_blank">Day Seven - Click Counter<br></a>
+                        <a href="http://bit.do/daysixproject180" target="_blank">Day Six - New Year Countdown<br></a>
+                            <a href="http://bit.do/daysevenproject" target="_blank">Day Seven - Click Counter<br></a>
                             <a href="http://bit.do/dayeight" target="_blank">Day Eight - MessengerApp<br></a>
-                            <a href="http://bit.do/daynine" target="_blank">Day Nine - Fortune Teller<br></a>
-                            <a href="http://bit.do/dayten" target="_blank">Day Ten - Buttons!<br></a>
+                            <a href="http://bit.do/daynineproject" target="_blank">Day Nine - Fortune Teller<br></a>
+                            <a href="http://bit.do/daytenproject" target="_blank">Day Ten - Buttons!<br></a>
                              <a href="http://bit.do/dayeleven" target="_blank">Day Eleven - Vocab Enhancer<br></a>
                             <a href="http://bit.do/daytwelve" target="_blank">Day Twelve - Falling Icons!<br></a>
                              <a href="http://bit.do/daythirteen" target="_blank">Day Thirteen - Bad Habit<br></a>
