--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                <a href="http://bit.do/dayfourtyeight" target="_blank">Day Fourty Eight - Detour<br></a>
                                 <a href="http://bit.do/dayfourtynine" target="_blank">Day Fourty Nine - Penrose Triangle<br></a>
                                  <a href="http://bit.do/dayfiftyproject" target="_blank">Day Fifty - Reflex Test<br></a>
-                                 <a href="http://bit.do/dayfiftyproject" target="_blank">Day Fifty One - Gifbot<br></a>
+                                 <a href="http://bit.do/dayfiftyone" target="_blank">Day Fifty One - Gifbot<br></a>
            
                         </p>
 					</div>
