Added Day Eight

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a href="http://bit.do/dayfiveproject180" target="_blank">Day Five - Lorem Ipsum<br></a>
                         <a href="http://bit.do/daysixproject180" target="_blank">Day Six - New Year Countdown<br></a>
                             <a href="http://bit.do/daysevenproject" target="_blank">Day Seven - Click Counter<br></a>
-                            <a href="http://bit.do/dayeight" target="_blank">Day Eight - MessengerApp<br></a>
+                            <a href="http://bit.do/dayeightproject" target="_blank">Day Eight - MessengerApp<br></a>
                             <a href="http://bit.do/daynineproject" target="_blank">Day Nine - Fortune Teller<br></a>
                             <a href="http://bit.do/daytenproject" target="_blank">Day Ten - Buttons!<br></a>
                              <a href="http://bit.do/dayeleven" target="_blank">Day Eleven - Vocab Enhancer<br></a>
