--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                                 <a href="http://bit.do/dayfourtynine" target="_blank">Day Fourty Nine - Penrose Triangle<br></a>
                                  <a href="http://bit.do/dayfiftyproject" target="_blank">Day Fifty - Reflex Test<br></a>
                                  <a href="http://bit.do/dayfiftyone" target="_blank">Day Fifty One - Gifbot<br></a>
+                                  <a href="http://bit.do/dayfiftytwo" target="_blank">Day Fifty Two - How Fast Can You Click?<br></a>
            
                         </p>
 					</div>
