--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                             <a href="http://bit.do/dayeightproject" target="_blank">Day Eight - Confetti<br></a>
                             <a href="http://bit.do/daynineproject" target="_blank">Day Nine - Fortune Teller<br></a>
                             <a href="http://bit.do/daytenproject" target="_blank">Day Ten - Buttons!<br></a>
-                             <a href="http://bit.do/dayeleven" target="_blank">Day Eleven - Vocab Enhancer<br></a>
-                            <a href="http://bit.do/daytwelve" target="_blank">Day Twelve - Falling Icons!<br></a>
-                             <a href="http://bit.do/daythirteen" target="_blank">Day Thirteen - Bad Habit<br></a>
+                             <a href="http://bit.do/dayelevenproject" target="_blank">Day Eleven - Vocab Enhancer<br></a>
+                            <a href="http://bit.do/daytwelveproject" target="_blank">Day Twelve - Falling Icons!<br></a>
+                             <a href="http://bit.do/daythirteenproject" target="_blank">Day Thirteen - Bad Habit<br></a>
                              <a href="http://bit.do/dayfourteen" target="_blank">Day Fourteen - Teleprompter<br></a>
                              <a href="http://bit.do/dayfifteen" target="_blank">Day Fifteen - Secret Message<br></a>
                              <a href="http://bit.do/daysixteen" target="_blank">Day Sixteen - Pig Latin<br></a>
