--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                              <a href="http://bit.do/dayelevenproject" target="_blank">Day Eleven - Vocab Enhancer<br></a>
                             <a href="http://bit.do/daytwelveproject" target="_blank">Day Twelve - Falling Icons!<br></a>
                              <a href="http://bit.do/daythirteenproject" target="_blank">Day Thirteen - Bad Habit<br></a>
-                             <a href="http://bit.do/dayfourteen" target="_blank">Day Fourteen - Teleprompter<br></a>
-                             <a href="http://bit.do/dayfifteen" target="_blank">Day Fifteen - Secret Message<br></a>
-                             <a href="http://bit.do/daysixteen" target="_blank">Day Sixteen - Pig Latin<br></a>
-                            <a href="http://bit.do/dayseventeen" target="_blank">Day Seventeen - Quote Machine<br></a>
-                            <a href="http://bit.do/dayeighteen" target="_blank">Day Eighteen - Stars<br></a>
-                             <a href="http://bit.do/daynineteen" target="_blank">Day Nineteen - Random Textface<br></a>
-                             <a href="http://bit.do/daytwenty" target="_blank">Day Twenty - Text Draw!<br></a>
+                             <a href="http://bit.do/dayfourteenproject" target="_blank">Day Fourteen - Teleprompter<br></a>
+                             <a href="http://bit.do/dayfifteenproject" target="_blank">Day Fifteen - Secret Message<br></a>
+                             <a href="http://bit.do/daysixteenproject" target="_blank">Day Sixteen - Pig Latin<br></a>
+                            <a href="http://bit.do/dayseventeenproject" target="_blank">Day Seventeen - Quote Machine<br></a>
+                            <a href="http://bit.do/dayeighteenproject" target="_blank">Day Eighteen - Stars<br></a>
+                             <a href="http://bit.do/daynineteenproject" target="_blank">Day Nineteen - Random Textface<br></a>
+                             <a href="http://bit.do/daytwentyproject" target="_blank">Day Twenty - Text Draw!<br></a>
                             <a href="http://bit.do/daytwentyone" target="_blank">Day Twenty One - ToDo App!<br></a>
                              <a href="http://bit.do/daytwentytwo" target="_blank">Day Twenty Two - Party Time?<br></a>
                             <a href="http://bit.do/daytwentythree" target="_blank">Day Twenty Three - dOUOb<br></a>
