Up to Day Thirty Two

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                              <a href="http://bit.do/daytwentyeightproject" target="_blank">Day Twenty Eight - Bouncy Ball<br></a>
                             <a href="http://bit.do/daytwentynineproject" target="_blank">Day Twenty Nine - Calculator<br></a>
                             <a href="http://bit.do/daythirtyproject" target="_blank">Day Thirty - Simon Game<br></a>
-                            <a href="http://bit.do/daythirtyone" target="_blank">Day Thirty One - Flying Letters<br></a>
-                            <a href="http://bit.do/daythirtytwo" target="_blank">Day Thirty Two - Animation<br></a>
+                            <a href="http://bit.do/daythirtyoneproject" target="_blank">Day Thirty One - Flying Letters<br></a>
+                            <a href="http://bit.do/daythirtytwoproject" target="_blank">Day Thirty Two - Animation<br></a>
                             <a href="http://bit.do/daythirtythree" target="_blank">Day Thirty Three - Weather<br></a>
                             <a href="http://bit.do/daythirtyfour" target="_blank">Day Thirty Four - Wikipedia Viewer<br></a>
                             <a href="http://bit.do/daythirtyfive" target="_blank">Day Thirty Five - Markdown Editor<br></a>
