--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                  <a href="http://bit.do/dayfiftyone" target="_blank">Day Fifty One - Gifbot<br></a>
                                   <a href="http://bit.do/dayfiftytwo" target="_blank">Day Fifty Two - How Fast Can You Click?<br></a>
                                   <a href="http://bit.do/dayfiftythree" target="_blank">Day Fifty Three - Jelly Text<br></a>
-                                  <a href="http://bit.do/dayfiftyfour" target="_blank">Day Fifty Three - Jelly Text<br></a>
+                                  <a href="http://bit.do/dayfiftyfour" target="_blank">Day Fifty Four - Password Checker<br></a>
            
                         </p>
 					</div>
