Up To Day Forty

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                             <a href="http://bit.do/daythirtyoneproject" target="_blank">Day Thirty One - Flying Letters<br></a>
                             <a href="http://bit.do/daythirtytwoproject" target="_blank">Day Thirty Two - Animation<br></a>
                             <a href="http://bit.do/daythirtythree" target="_blank">Day Thirty Three - Weather<br></a>
-                            <a href="http://bit.do/daythirtyfour" target="_blank">Day Thirty Four - Wikipedia Viewer<br></a>
-                            <a href="http://bit.do/daythirtyfive" target="_blank">Day Thirty Five - Markdown Editor<br></a>
-                            <a href="http://bit.do/daythirtysix" target="_blank">Day Thirty Six - Ball Shooter<br></a>
-                             <a href="http://bit.do/daythirtyseven" target="_blank">Day Thirty Seven - Synthesizer<br></a>
-                             <a href="http://bit.do/daythirtyeight" target="_blank">Day Thirty Eight - Analog Clock<br></a>
-                            <a href="http://bit.do/daythirtynine" target="_blank">Day Thirty Nine - Letter Attack<br></a>
-                            <a href="http://bit.do/dayfourty" target="_blank">Day Fourty - Exploding Text<br></a>
+                            <a href="http://bit.do/daythirtyfourproject" target="_blank">Day Thirty Four - Wikipedia Viewer<br></a>
+                            <a href="http://bit.do/daythirtyfiveproject" target="_blank">Day Thirty Five - Markdown Editor<br></a>
+                            <a href="http://bit.do/daythirtysixproject" target="_blank">Day Thirty Six - Ball Shooter<br></a>
+                             <a href="http://bit.do/daythirtysevenproject" target="_blank">Day Thirty Seven - Synthesizer<br></a>
+                             <a href="http://bit.do/daythirtyeightproject" target="_blank">Day Thirty Eight - Analog Clock<br></a>
+                            <a href="http://bit.do/daythirtynineproject" target="_blank">Day Thirty Nine - Letter Attack<br></a>
+                            <a href="http://bit.do/dayfourtyproject" target="_blank">Day Fourty - Exploding Text<br></a>
                              <a href="http://bit.do/dayfourtyone" target="_blank">Day Fourty One - Fireworks<br></a>
                              <a href="http://bit.do/dayfourtytwo" target="_blank">Day Fourty Two - Solar System<br></a>
                             <a href="http://bit.do/dayfourtythree" target="_blank">Day Fourty Three - Cube<br></a>
