--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                                   <a href="http://bit.do/dayfiftythree" target="_blank">Day Fifty Three - Jelly Text<br></a>
                                   <a href="http://bit.do/dayfiftyfour" target="_blank">Day Fifty Four - Password Checker<br></a>
                                    <a href="http://bit.do/dayfiftyfive" target="_blank">Day Fifty Five - Happy Holidays!<br></a>
+                                    <a href="http://bit.do/dayfiftysix" target="_blank">Day Fifty Six - Take Notes<br></a>
            
                         </p>
 					</div>
