--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                                   <a href="http://bit.do/dayfiftyfour" target="_blank">Day Fifty Four - Password Checker<br></a>
                                    <a href="http://bit.do/dayfiftyfive" target="_blank">Day Fifty Five - Happy Holidays!<br></a>
                                     <a href="http://bit.do/dayfiftysix" target="_blank">Day Fifty Six - Take Notes<br></a>
+                                    <a href="http://bit.do/dayfiftyseven" target="_blank">Day Fifty Seven - Guess The Number!<br></a>
            
                         </p>
 					</div>
