--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Project 180 Days</title>
 		<meta name="description" content="Main Site for 180 Project" />
-		<meta name="keywords" content="180, website, project, portfolio, main, list, sites, developing, code, learn" />
+		<meta name="keywords" content="180, website, project, portfolio, main, list, sites, developing, code, learn, challenge, learn coding, how to code, create websites, html, css, program, Learn coding with projects, learn coding project, coding projects" />
 		<meta name="author" content="Kabir Shah" />
 		<link rel="shortcut icon" href="favicon.png"> 
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
