--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div id="bl-main" class="bl-main">
 				<section>
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-about">About</h2>
+						<h1 class="bl-icon bl-icon-about">About</h1>
 					</div>
 					<div class="bl-content">
 <section name="aba2" class=" section--body section--first" style="position: relative; clear: both; padding-top: 0px; margin-top: 20px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 18px; line-height: 25.2px; ">
@@ -95,10 +95,10 @@
 				</section>
 				<section id="bl-work-section">
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-works">Sites</h2>
+						<h1 class="bl-icon bl-icon-works">Sites</h1>
 					</div>
 					<div class="bl-content">
-						<h2>All Sites</h2>
+						<h1>All Sites</h1>
 						<p>
                             <a  href="http://bit.do/dayoneproject" target="_blank">Day One - About<br></a>
                            <a href="http://bit.do/daytwoproject" target="_blank">Day Two - Random Color<br></a>
@@ -164,20 +164,21 @@
 				</section>
 				<section>
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-blog">Blog</h2>
+						<h1 class="bl-icon bl-icon-blog">Blog</h1>
 					</div>
 					<div class="bl-content">
                         <h2><a href="http://bit.do/180days">Click Here To Go To Blog</a></h2>
+                        <p>For everyday that a new website is published, there will be a blog post to go with it!</p>
 
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
 				<section>
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-contact">Contact</h2>
+						<h1 class="bl-icon bl-icon-contact">Contact</h1>
 					</div>
 					<div class="bl-content">
-						<h2>Want more details?</h2>
+						<h1>Want more details?</h1>
 						<p>Check out the blog, and reach out to me there.</p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
