Day Fifty Eight

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                                    <a href="http://bit.do/dayfiftyfive" target="_blank">Day Fifty Five - Happy Holidays!<br></a>
                                     <a href="http://bit.do/dayfiftysix" target="_blank">Day Fifty Six - Take Notes<br></a>
                                     <a href="http://bit.do/dayfiftyseven" target="_blank">Day Fifty Seven - Guess The Number!<br></a>
+                                      <a href="http://bit.do/dayfiftyeight" target="_blank">Day Fifty Eight - Draw<br></a>
            
                         </p>
 					</div>
