--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                                     <a href="http://bit.do/dayfiftysix" target="_blank">Day Fifty Six - Take Notes<br></a>
                                     <a href="http://bit.do/dayfiftyseven" target="_blank">Day Fifty Seven - Guess The Number!<br></a>
                                       <a href="http://bit.do/dayfiftyeight" target="_blank">Day Fifty Eight - Draw<br></a>
+                                       <a href="http://bit.do/dayfiftynine" target="_blank">Day Fifty Nine - Hack Terminal<br></a>
            
                         </p>
 					</div>
