--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                                     <a href="http://bit.do/dayfiftyseven" target="_blank">Day Fifty Seven - Guess The Number!<br></a>
                                       <a href="http://bit.do/dayfiftyeight" target="_blank">Day Fifty Eight - Draw<br></a>
                                        <a href="http://bit.do/dayfiftynine" target="_blank">Day Fifty Nine - Hack Terminal<br></a>
+                                        <a href="http://bit.do/daysixty" target="_blank">Day Sixty - Glitch<br></a>
            
                         </p>
 					</div>
