--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                                       <a href="http://bit.do/dayfiftyeight" target="_blank">Day Fifty Eight - Draw<br></a>
                                        <a href="http://bit.do/dayfiftynine" target="_blank">Day Fifty Nine - Hack Terminal<br></a>
                                         <a href="http://bit.do/daysixty" target="_blank">Day Sixty - Glitch<br></a>
+                                        <a href="http://bit.do/daysixtyone" target="_blank">Day Sixty One - SVG Vacation<br></a>
            
                         </p>
 					</div>
