--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                        <a href="http://bit.do/dayfiftynine" target="_blank">Day Fifty Nine - Hack Terminal<br></a>
                                         <a href="http://bit.do/daysixty" target="_blank">Day Sixty - Glitch<br></a>
                                         <a href="http://bit.do/daysixtyone" target="_blank">Day Sixty One - SVG Vacation<br></a>
-                                        <a href="http://bit.do/daysixtytwo" target="_blank">Day Sixty Two - Game Of Life<br></a
+                                        <a href="http://bit.do/daysixtytwo" target="_blank">Day Sixty Two - Game Of Life<br></a>
                                         <a href="http://bit.do/daysixtythree" target="_blank">Day Sixty Three - Draw With Checkboxes<br></a>
            
                         </p>
