--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                                         <a href="http://bit.do/daysixtytwo" target="_blank">Day Sixty Two - Game Of Life<br></a>
                                         <a href="http://bit.do/daysixtythree" target="_blank">Day Sixty Three - Draw With Checkboxes<br></a>
                                         <a href="http://bit.do/daysixtyfour" target="_blank">Day Sixty Four - Dots<br></a>
+                                         <a href="http://bit.do/daysixtyfive" target="_blank">Day Sixty Five - SVG Coffee<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
