--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                                         <a href="http://bit.do/daysixtythree" target="_blank">Day Sixty Three - Draw With Checkboxes<br></a>
                                         <a href="http://bit.do/daysixtyfour" target="_blank">Day Sixty Four - Dots<br></a>
                                          <a href="http://bit.do/daysixtyfive" target="_blank">Day Sixty Five - SVG Coffee<br></a>
+                                         <a href="http://bit.do/daysixtysix" target="_blank">Day Sixty Six - SVG Lightbulb<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
