--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                                         <a href="http://bit.do/daysixtyfour" target="_blank">Day Sixty Four - Dots<br></a>
                                          <a href="http://bit.do/daysixtyfive" target="_blank">Day Sixty Five - SVG Coffee<br></a>
                                          <a href="http://bit.do/daysixtysix" target="_blank">Day Sixty Six - SVG Lightbulb<br></a>
+                                          <a href="http://bit.do/daysixtyseven" target="_blank">Day Sixty Seven - Random Joke<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
