--- a/public/color.html
+++ b/public/color.html
@@ -33,6 +33,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js"></script>
-		<script src="color.js"></script>
+		<script src="public/js/color.js"></script>
 	</body>
 </html>
