--- a/public/color.html
+++ b/public/color.html
@@ -9,7 +9,7 @@
 
 		<title>Color</title>
 				<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/themes/base/jquery-ui.css" />
-		<link rel="stylesheet" type="text/css" href="color.css" />
+		<link rel="stylesheet" type="text/css" href="public/css/color.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
