--- a/public/color.html
+++ b/public/color.html
@@ -9,7 +9,7 @@
 
 		<title>Color</title>
 				<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/themes/base/jquery-ui.css" />
-		<link rel="stylesheet" type="text/css" href="css/color.css" />
+		<link rel="stylesheet" type="text/css" href="http://www.main180.tk/public/css/color.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
@@ -33,6 +33,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js"></script>
-		<script src="js/color.js"></script>
+		<script src="http://www.main180.tk/public/js/color.js"></script>
 	</body>
 </html>
