--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                                          <a href="http://bit.do/daysixtyfive" target="_blank">Day Sixty Five - SVG Coffee<br></a>
                                          <a href="http://bit.do/daysixtysix" target="_blank">Day Sixty Six - SVG Lightbulb<br></a>
                                           <a href="http://bit.do/daysixtyseven" target="_blank">Day Sixty Seven - Random Joke<br></a>
+                                          <a href="public/color.html" target="_blank">Day Sixty Seven - Random Joke<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
