--- a/public/draw2point0.html
+++ b/public/draw2point0.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Kabir Shah" />
 
 		<title>Draw 2.0</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
+		<link rel="stylesheet" type="text/css" href="public/css/main.css" />
 <link rel="shortcut icon" type="image/png" href="public/img/favicon.png"/>
 	</head>
 
@@ -47,6 +47,6 @@
     </div>
   </div>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="js/draw2point0.js"></script>
+		<script src="public/js/draw2point0.js"></script>
 	</body>
 </html>
