--- a/public/draw2point0.html
+++ b/public/draw2point0.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Kabir Shah" />
 
 		<title>Draw 2.0</title>
-		<link rel="stylesheet" type="text/css" href="public/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="public/css/draw2point0.css" />
 <link rel="shortcut icon" type="image/png" href="public/img/favicon.png"/>
 	</head>
 
