--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<div class="bl-content">
 						<h2>All Sites</h2>
 						<p>
-                            <a  href="http://bit.do/dayoneproject" target="_blank">Day One - About<br></a>
+                            <a  href="/public/about.html" target="_blank">Day One - About<br></a>
                            <a href="http://bit.do/daytwoproject" target="_blank">Day Two - Random Color<br></a>
                             <a href="http://bit.do/daythreeproject" target="_blank">Day Three - What's The Day?<br></a>
                             <a href="http://bit.do/dayfourproject" target="_blank">Day Four - Dice<br></a>
