--- a/public/newyear.html
+++ b/public/newyear.html
@@ -9,7 +9,7 @@
 
 		<title>New Year Countdown</title>
 
-		<link rel="stylesheet" type="text/css" href="main.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/newyear.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="https://kingpixil.github.io/DaySix/favicon.png"/>
 	</head>
