--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 						<h2>All Sites</h2>
 						<p>
                             <a  href="/public/about.html" target="_blank">Day One - About<br></a>
-                           <a href="http://bit.do/daytwoproject" target="_blank">Day Two - Random Color<br></a>
-                            <a href="http://bit.do/daythreeproject" target="_blank">Day Three - What's The Day?<br></a>
-                            <a href="http://bit.do/dayfourproject" target="_blank">Day Four - Dice<br></a>
-                            <a href="http://bit.do/dayfiveproject180" target="_blank">Day Five - Lorem Ipsum<br></a>
-                        <a href="http://bit.do/daysixproject180" target="_blank">Day Six - New Year Countdown<br></a>
+                           <a href="/public/randomcolor.html" target="_blank">Day Two - Random Color<br></a>
+                            <a href="/public/whatstheday.html" target="_blank">Day Three - What's The Day?<br></a>
+                            <a href="/public/dice.html" target="_blank">Day Four - Dice<br></a>
+                            <a href="/public/loremipsum.html" target="_blank">Day Five - Lorem Ipsum<br></a>
+                        <a href="/public/newyear.html" target="_blank">Day Six - New Year Countdown<br></a>
                             <a href="http://bit.do/daysevenproject" target="_blank">Day Seven - Click Counter<br></a>
                             <a href="http://bit.do/dayeightproject" target="_blank">Day Eight - Confetti<br></a>
                             <a href="http://bit.do/daynineproject" target="_blank">Day Nine - Fortune Teller<br></a>
@@ -168,6 +168,7 @@
                                          <a href="http://bit.do/daysixtysix" target="_blank">Day Sixty Six - SVG Lightbulb<br></a>
                                           <a href="http://bit.do/daysixtyseven" target="_blank">Day Sixty Seven - Random Joke<br></a>
                                           <a href="public/color.html" target="_blank">Day Sixty Eight - Color<br></a>
+                                          <a href="public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0</a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
