--- a/public/newyear.html
+++ b/public/newyear.html
@@ -12,6 +12,16 @@
 		<link rel="stylesheet" type="text/css" href="/public/css/newyear.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="https://kingpixil.github.io/DaySix/favicon.png"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70792533-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	</head>
 	<body>
 		<h1>New Year Countdown</h1>
