--- a/public/confetti.html
+++ b/public/confetti.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Kabir Shah">
 
 		<title>Confetti</title>
-		<link rel="stylesheet" type="text/css" href="confetti.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/confetti.css" />
 	</head>
 	<body>
 		<canvas id='confeti'></canvas>
-		<script src="confetti.js"></script>
+		<script src="/public/js/confetti.js"></script>
 	</body>
 </html>
