--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                             <a href="/public/dice.html" target="_blank">Day Four - Dice<br></a>
                             <a href="/public/loremipsum.html" target="_blank">Day Five - Lorem Ipsum<br></a>
                         <a href="/public/newyear.html" target="_blank">Day Six - New Year Countdown<br></a>
-                            <a href="http://bit.do/daysevenproject" target="_blank">Day Seven - Click Counter<br></a>
-                            <a href="http://bit.do/dayeightproject" target="_blank">Day Eight - Confetti<br></a>
+                            <a href="/public/clickchallenge.html" target="_blank">Day Seven - Click Challenge<br></a>
+                            <a href="/public/confetti.html" target="_blank">Day Eight - Confetti<br></a>
                             <a href="http://bit.do/daynineproject" target="_blank">Day Nine - Fortune Teller<br></a>
                             <a href="http://bit.do/daytenproject" target="_blank">Day Ten - Buttons!<br></a>
                              <a href="http://bit.do/dayelevenproject" target="_blank">Day Eleven - Vocab Enhancer<br></a>
