--- a/public/stopwatch.html
+++ b/public/stopwatch.html
@@ -9,7 +9,7 @@
 
 		<title>Stopwatch</title>
 
-		<link rel="stylesheet" type="text/css" href="stopwatch.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/stopwatch.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 		<script>
