--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                                           <a href="http://bit.do/daysixtyseven" target="_blank">Day Sixty Seven - Random Joke<br></a>
                                           <a href="public/color.html" target="_blank">Day Sixty Eight - Color<br></a>
                                           <a href="public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0</a>
+                                          <a href="public/stopwatch.html" target="_blank">Day Seventy - Stopwatch</a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
