--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                                          <a href="http://bit.do/daysixtysix" target="_blank">Day Sixty Six - SVG Lightbulb<br></a>
                                           <a href="http://bit.do/daysixtyseven" target="_blank">Day Sixty Seven - Random Joke<br></a>
                                           <a href="public/color.html" target="_blank">Day Sixty Eight - Color<br></a>
-                                          <a href="public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0</a>
-                                          <a href="public/stopwatch.html" target="_blank">Day Seventy - Stopwatch</a>
+                                          <a href="public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0<br></a>
+                                          <a href="public/stopwatch.html" target="_blank">Day Seventy - Stopwatch<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
