--- a/public/static.html
+++ b/public/static.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="/public/css/static.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
-<script src="/public/js/analatics.js"></script>
+<script src="/public/js/analytics.js"></script>
 	</head>
 	<body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.3.4/platform.js"></script>
