--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                                           <a href="public/draw2point0.html" target="_blank">Day Sixty Nine - Draw 2.0<br></a>
                                           <a href="public/stopwatch.html" target="_blank">Day Seventy - Stopwatch<br></a>
                                           <a href="public/fixit.html" target="_blank">Day Seventy One - Fix It<br></a>
+                                           <a href="public/static.html" target="_blank">Day Seventy Two - Static<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
