--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                                           <a href="public/stopwatch.html" target="_blank">Day Seventy - Stopwatch<br></a>
                                           <a href="public/fixit.html" target="_blank">Day Seventy One - Fix It<br></a>
                                            <a href="public/static.html" target="_blank">Day Seventy Two - Static<br></a>
+                                           <a href="public/lottery.html" target="_blank">Day Seventy Three - Lottery<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
