--- a/public/mirror.html
+++ b/public/mirror.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Study Guide For Egypt!">
+    <meta name="author" content="Kabir Shah">
+
+    <title>EGYPT | KABIR SHAH</title>
+    
+    <link href="/public/css/mirror.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+<link rel="shortcut icon" type="image/png" href="https://kingpixil.github.io/DayFiftyNine/favicon.png"/>
+    </head>
+    <body>
 <section class="left">
   <textarea placeholder="Type something..." spellcheck="false">Something
 
@@ -26,3 +42,8 @@ What is it? What is it? . . .
 <section class="right">
   <textarea placeholder="Type something..." spellcheck="false"></textarea>
 </section>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/autosize.js/1.18.4/jquery.autosize.min.js"></script>
+<script src="/public/js/mirror.js"
+</body>
+</html>
