--- a/public/mirror.html
+++ b/public/mirror.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Study Guide For Egypt!">
+    <meta name="description" content="Day Seventy Four | Mirror">
     <meta name="author" content="Kabir Shah">
 
-    <title>EGYPT | KABIR SHAH</title>
+    <title>Mirror</title>
     
     <link href="/public/css/mirror.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
