--- a/public/mirror.html
+++ b/public/mirror.html
@@ -44,6 +44,6 @@ What is it? What is it? . . .
 </section>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/autosize.js/1.18.4/jquery.autosize.min.js"></script>
-<script src="/public/js/mirror.js"
+<script src="/public/js/mirror.js"></script>
 </body>
 </html>
