--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                                           <a href="public/fixit.html" target="_blank">Day Seventy One - Fix It<br></a>
                                            <a href="public/static.html" target="_blank">Day Seventy Two - Static<br></a>
                                            <a href="public/lottery.html" target="_blank">Day Seventy Three - Lottery<br></a>
+                                           <a href="public/mirror.html" target="_blank">Day Seventy Four - Mirror<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
