--- a/public/mirror.html
+++ b/public/mirror.html
@@ -10,7 +10,7 @@
     <title>Mirror</title>
     
     <link href="/public/css/mirror.css" rel="stylesheet" type="text/css">
-    <script src="/public/js/analytics.js"
+    <script src="/public/js/analytics.js"></script>
 <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="https://kingpixil.github.io/DayFiftyNine/favicon.png"/>
     </head>
