--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                                            <a href="public/static.html" target="_blank">Day Seventy Two - Static<br></a>
                                            <a href="public/lottery.html" target="_blank">Day Seventy Three - Lottery<br></a>
                                            <a href="public/mirror.html" target="_blank">Day Seventy Four - Mirror<br></a>
+                                           <a href="public/wateradventure.html" target="_blank">Day Seventy Five - Water Adventure<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
