--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                                            <a href="public/lottery.html" target="_blank">Day Seventy Three - Lottery<br></a>
                                            <a href="public/mirror.html" target="_blank">Day Seventy Four - Mirror<br></a>
                                            <a href="public/wateradventure.html" target="_blank">Day Seventy Five - Water Adventure<br></a>
+                                           <a href="public/schedule.html" target="_blank">Day Seventy Six - Schedule<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
