--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                                            <a href="public/mirror.html" target="_blank">Day Seventy Four - Mirror<br></a>
                                            <a href="public/wateradventure.html" target="_blank">Day Seventy Five - Water Adventure<br></a>
                                            <a href="public/schedule.html" target="_blank">Day Seventy Six - Schedule<br></a>
+                                           <a href="public/lockpicker.html" target="_blank">Day Seventy Seven - Lock Picker<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
