--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                                            <a href="public/wateradventure.html" target="_blank">Day Seventy Five - Water Adventure<br></a>
                                            <a href="public/schedule.html" target="_blank">Day Seventy Six - Schedule<br></a>
                                            <a href="public/lockpicker.html" target="_blank">Day Seventy Seven - Lock Picker<br></a>
+                                           <a href="public/leaveanote.html" target="_blank">Day Seventy Eight - Leave A Note<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
