--- a/index.html
+++ b/index.html
@@ -248,5 +248,6 @@
 				Boxlayout.init();
 			});
 		</script>
+		<script type="text/javascript"> var infolinks_pid = 2593076; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 	</body>
 </html>
