--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                                            <a href="public/schedule.html" target="_blank">Day Seventy Six - Schedule<br></a>
                                            <a href="public/lockpicker.html" target="_blank">Day Seventy Seven - Lock Picker<br></a>
                                            <a href="public/leaveanote.html" target="_blank">Day Seventy Eight - Leave A Note<br></a>
+                                           <a href="public/wheelofhistory.html" target="_blank">Day Seventy Nine - Wheel Of History<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
