--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                                            <a href="public/lockpicker.html" target="_blank">Day Seventy Seven - Lock Picker<br></a>
                                            <a href="public/leaveanote.html" target="_blank">Day Seventy Eight - Leave A Note<br></a>
                                            <a href="public/wheelofhistory.html" target="_blank">Day Seventy Nine - Wheel Of History<br></a>
+                                           <a href="public/favoritecolor.html" target="_blank">Day Eighty - Favorite Color<br></a>
                         </p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
