--- a/public/favoritecolor.html
+++ b/public/favoritecolor.html
@@ -9,7 +9,7 @@
 
 
 		<title>Favorite Color</title>
-				<link rel="stylesheet" type="text/css" href="main.css" />
+				<link rel="stylesheet" type="text/css" href="/public/css/favoritecolor.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
