--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 </script>
 	</head>
 	<body>
+		<a data-pin-do="buttonPin" href="https://www.pinterest.com/pin/create/button/?url=https%3A%2F%2Fwww.flickr.com%2Fphotos%2Fkentbrew%2F6851755809%2F&media=https%3A%2F%2Ffarm8.staticflickr.com%2F7027%2F6851755809_df5b2051c9_z.jpg&description=Next%20stop%3A%20Pinterest"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" /></a>
+		<script async defer src="//assets.pinterest.com/js/pinit.js"></script>
 		<div class="container">	
 			<div id="bl-main" class="bl-main">
 				<section>
