--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                                            <a href="public/leaveanote.html" target="_blank">Day Seventy Eight - Leave A Note<br></a>
                                            <a href="public/wheelofhistory.html" target="_blank">Day Seventy Nine - Wheel Of History<br></a>
                                            <a href="public/favoritecolor.html" target="_blank">Day Eighty - Favorite Color<br></a>
+                                           <a href="public/capitalize.html" target="_blank">Day Eighty One - Capitalize Text<br></a>
 								</div>
               </div>
             </div>
