--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="/public/favoritecolor.html">Latest Website</a>
+                      <a href="/public/capitalize.html">Latest Website</a>
                   </h1>
               </div>
             </div>
